# generative-manufacturing

./: LICENSE  README.md  autopilot_implementation_summary.md  gemini3-hackathon-ideas.md  notes.txt
demo-host/: package-lock.json  package.json
demo-host/src/: sandbox.ts
generative-manufacturing-server/: .dockerignore  .env.example  .gitignore  Dockerfile  mock_printer.py  printer.py  prusa_printer.py  pyproject.toml  requirements.txt  server.py  slicer_runner.py  stl_generator.py
generative-manufacturing-server/assets/sop/: bed_adhesion.md  layer_shift.md  safety.md  spaghetti.md
generative-manufacturing-server/resources/: model-generator.html  printer-analysis.html  printer-dashboard.html  printer-incident.html  printer-snapshot.html
generative-manufacturing-server/tests/: test_control_mock.py  test_live.py  test_server.py  test_snapshot_resource.py  test_stl_gen.py
